Fix overflow layout

--- a/src/App.scss
+++ b/src/App.scss
@@ -35,6 +35,8 @@ html, body, #root{
   display: grid;
   place-content: center;
   padding: 0.5em;
+  height: 0; //overflow fix
+  min-height: 100%; //overflow fix
 }
 
 .control{
@@ -57,7 +59,7 @@ html, body, #root{
   }
 }
 
-.player .player_control{
+.player .player_control .buttons{
   border: 1px solid gray;
   border-radius: 10px;
   padding: 0.5em 1em;
